--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,16 +1,90 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container" id="main">
+    <div class="navbar navbar-fixed-top">
+        <div class="container">
+            <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+            <button class="navbar-toggle" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a style="float: left; margin: 2px 0 0 5px;" class="navbar-brand" href="/"><img src="/recipesbook/images/logo.png" alt="Your Logo"></a>
 
 
 
-{{# each items }}
+            <div class="nav-collapse collapse navbar-responsive-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">AboutUs</a>
+                    </li>
 
-    <h3>{{ this.name }} </h3>
+                </ul>
+            </div><!-- end nav-collapse -->
 
-    <h3>{{ this.category }} </h3>
+        </div><!-- end container -->
+    </div><!-- end navbar -->
 
-    <img alt="User Pic" src="{{ this.image }}" class="img-responsive">
 
 
-{{/each}}
+    {{# each items }}
+
+        <h3>{{ this.name }} </h3>
+
+        <h3>{{ this.category }} </h3>
+
+        <img alt="User Pic" src="{{ this.image }}" class="img-responsive">
+
+
+    {{/each}}
+
+
+
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-10 text-center">
+                    <br>
+                    <br>
+                    <h4>Copyright &copy; O.K Web Design 2016. All Rights Reserved</h4>
+                    <h4><a href="mailto:obadhh@gmail.com">Obadhh@gmail.com</a></h4>
+                </div><!-- end col-sm-10 -->
+
+
+
+                <div class="col-sm-2">
+                    <h5>Follow Us</h5>
+                    <ul class="unstyled">
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Google Plus</a></li>
+                    </ul>
+                </div><!-- end col-sm-2 -->
+
+            </div><!-- end row -->
+        </div><!-- end container -->
+    </footer>
+</div> <!-- end container -->
+
+    <!-- All Javascript at the bottom of the page for faster page loading -->
+    <!-- First try for the online version of jQuery-->
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <!-- If no online access, fallback to our hardcoded version of jQuery -->
+    <script>window.jQuery || document.write('<script src="/recipesbook/includes/js/jquery-1.8.2.min.js"><\/script>')</script>
+    <!-- Bootstrap JS -->
+    <script src="/recipesbook/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Custom JS -->
+    <script src="/recipesbook/includes/js/script.js"></script>
+
+
+
+
+
+
+
+
+
 
