--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -1,8 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+
+      <title>RecipesBook</title>
+      <meta name="description" content="">
+      <!-- Mobile viewport optimized -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+      <!-- Bootstrap CSS -->
+
+
+      <link href="/recipesbook/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link href="/recipesbook/includes/css/bootstrap-glyphicons.css" rel="stylesheet">
+
+      <!-- Include Modernizr in the head, before any other Javascript -->
+      <script src="/recipesbook/includes/js/modernizr-2.6.2.min.js"></script>
+
+
+      <link href="/stylesheets/styles_index.css" rel="stylesheet" >
+
+
+
+
+
+
   </head>
   <body>
     {{{body}}}
