--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -22,10 +22,8 @@
       </div>
 </div><!-- end navbar -->
 
-
-
 <div class="container">
-    <button class="pull-left btn btn-primary" type="button">
+    <button class="pull-left btn btn-primary" type="submit">
       Number of results:  <span class="badge">100</span>
     </button>
 
@@ -42,7 +40,13 @@
         </form>
 
 
-</div>
+      </div>
+
+    	<div>
+    		<input ng-model="test">
+    		<h1>{{test}}</h1>
+    	</div>
+
 
 
         <div class="container productsContainer">
@@ -52,15 +56,20 @@
                     <div class="clearfix"></div>
                       <h1>{{this.name}}</h1>
                       {{# each this.items }}
+                      <form method="get">
                           <div class="item col-xs-6 col-sm-4 col-md-3 col-lg-2">
+                            <label class="btn">
                               <div class="thumbnail">
-                                  <img class="group list-group-image" src="{{ this.image }}" alt="User Pic" />
+                                  <img class="group list-group-image img-thumbnail img-check" src="{{ this.image }}" alt="User Pic" />
+                                  <input type="checkbox" name="{{ this.name }}" id="{{ this.name }}" value="{{ this.name }}" class="hidden" autocomplete="off">
                                   <div class="caption">
                                       <h4 class="group inner list-group-item-heading">
                                           {{ this.name }}</h4>
                                   </div>
                               </div>
+                            </label>
                           </div>
+                          </form>
                         {{/each}}
                     {{/each}}
                 </div>
