--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -22,10 +22,8 @@
       </div>
 </div><!-- end navbar -->
 
-<div class="container">
-    <button class="pull-left btn btn-primary" type="submit">
-      Number of results:  <span class="badge">100</span>
-    </button>
+<div class="container ">
+
 
 
   <!-- <form>
@@ -34,7 +32,7 @@
       <label for="search"></label>
     </div>
   </form> -->
-  <form class="form-inline pull-right">
+        <form class="form-inline pull-right">
             <input class="form-control" type="text" placeholder="Search">
             <button class="btn btn-success-outline pull-right" type="submit">Search</button>
         </form>
@@ -42,21 +40,20 @@
 
       </div>
 
-    	<div>
+    	<!-- <div>
     		<input ng-model="test">
     		<h1>{{test}}</h1>
-    	</div>
+    	</div> -->
 
 
 
         <div class="container productsContainer">
-
                 <div id="products" class="row list-group">
+                  <form method="get">
                     {{# each categories }}
                     <div class="clearfix"></div>
                       <h1>{{this.name}}</h1>
                       {{# each this.items }}
-                      <form method="get">
                           <div class="item col-xs-6 col-sm-4 col-md-3 col-lg-2">
                             <label class="btn">
                               <div class="thumbnail">
@@ -69,9 +66,12 @@
                               </div>
                             </label>
                           </div>
-                          </form>
                         {{/each}}
                     {{/each}}
+                    <button class="pull-left btn btn-primary" id="fixed-btn" type="submit">
+                      Number of results:  <span class="badge">100</span>
+                    </button>
+                    </form>
                 </div>
         </div>
 
