--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -49,7 +49,7 @@
 
         <div class="container productsContainer">
                 <div id="products" class="row list-group">
-                  <form action="" method="get">
+                  <form action="#" method="get">
                     {{# each categories }}
                     <div class="clearfix"></div>
                       <h1>{{this.name}}</h1>
