--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -40,10 +40,10 @@
 
       </div>
 
-    	<div>
-    		<input ng-model="test">
-    		<h1>{{test}}</h1>
-    	</div>
+      <div>
+  			<input ng-model="test">
+  			<h1>[[test]]</h1>
+  		</div>
 
 
 
