--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -22,11 +22,19 @@
 
 
 
+      <!-- AngularJs -->
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 
+      <script>
+      var myApp = angular.module('recepiebook', [], function($interpolateProvider) {
+            $interpolateProvider.startSymbol('[[');
+            $interpolateProvider.endSymbol(']]');
+        });
+      </script>
 
 
   </head>
-  <body>
+  <body ng-app="recepiebook">
     {{{body}}}
   </body>
 </html>
