modified index.js and index.hbs

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -78,6 +78,35 @@
 
 
 
+        {{# each recipes }}
+         Name of recipes : {{this.name}} </br>
+         Ingredients :  {{this.ingredients}} </br>
+         Image : <img  src="{{ this.image }}" alt="User Pic" /> </br>
+         Description :  {{this.description}} </br>
+
+      </br></br></br>
+        {{/each}}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <footer>
