--- a/server/views/admin.hbs
+++ b/server/views/admin.hbs
@@ -33,7 +33,15 @@
                     <label>
                         Ingredients<span class="req">*</span>
                     </label>
+
+
+
                     <textarea rows="4" cols="30" name="Ingredients_recipes"> </textarea>
+
+
+
+
+
                 </div>
 
                 <div class="field-wrap">
@@ -106,7 +114,7 @@
 
 
 
-{{# each items }}
+<!-- {{# each items }}
 
     <h3>{{ this.name }} </h3>
 
@@ -115,9 +123,4 @@
     <img alt="User Pic" src="{{ this.pic }}" class="img-responsive">
 
 
-{{/each}}
-
-
-
-
-
+{{/each}} -->
