--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="recepie" ng-controller="search-recepie">
+<html ng-app="newsApp">
   <head>
 
 
@@ -23,7 +23,7 @@
 
 
       <!-- AngularJs -->
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
 
       <script>
       var myApp = angular.module('recepiebook', [], function($interpolateProvider) {
@@ -32,9 +32,12 @@
         });
       </script>
 
+      <!-- App -->
+      <script src="/controllers/controller.js"></script>
+      
 
   </head>
-  <body ng-app="recepiebook">
+  <body>
     {{{body}}}
   </body>
 </html>
