--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="newsApp">
+<html>
   <head>
 
 
@@ -34,10 +34,9 @@
 
       <!-- App -->
       <script src="/controllers/controller.js"></script>
-      
 
-  </head>
-  <body>
-    {{{body}}}
-  </body>
-</html>
+    </head>
+    <body ng-app="recepiebook">
+      {{{body}}}
+    </body>
+  </html>
