--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,26 +1,41 @@
-<div class="navbar navbar-inverse" id="nav-main">
-        <div class="container-fluid">
-          <div class="navbar-header">
-        <button class="navbar-toggle" data-target="#myNavbar" data-toggle="collapse" type="button">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        </button>
+<header class="cd-header">
+		<a href="#0" class="cd-logo"><img src="images/logo.png" width="" height="" alt="Logo"></a>
+		<a href="#0" class="cd-3d-nav-trigger">
+			Menu
+			<span></span>
+		</a>
+	</header> <!-- .cd-header -->
 
-        <a class="navbar-brand" href="/"><img src="images/logo.png" alt="my Logo" height="80" width="80"></a>
-      </div>
-        <div class="nav-collapse collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">AboutUs</a>
-                </li>
-            </ul>
-        </div><!-- end nav-collapse -->
-      </div>
-</div><!-- end navbar -->
+	<main>
+
+		<!-- all your content here -->
+	</main>
+
+	<nav class="cd-3d-nav-container">
+		<ul class="cd-3d-nav">
+			<!-- <li class="cd-selected">
+				<a href="#0">Home</a>
+			</li> -->
+
+			<li>
+				<a href="/">Home</a>
+			</li>
+
+			<!-- <li>
+				<a href="#0">Images</a>
+			</li> -->
+
+			<!-- <li>
+				<a href="#0">A</a>
+			</li> -->
+
+			<li>
+				<a href="/">AboutUs</a>
+			</li>
+		</ul> <!-- .cd-3d-nav -->
+
+		<span class="cd-marker color-1"></span>
+	</nav> <!-- .cd-3d-nav-container -->
 
 
         <div class="nav-wrapper container">
@@ -100,25 +115,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <footer>
         <div class="container">
             <div class="row">
@@ -147,9 +143,7 @@
 
     <!-- All Javascript at the bottom of the page for faster page loading -->
     <!-- First try for the online version of jQuery-->
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <!-- If no online access, fallback to our hardcoded version of jQuery -->
-    <script>window.jQuery || document.write('<script src="/recipesbook/includes/js/jquery-1.8.2.min.js"><\/script>')</script>
+    <script src="javascripts/main.js"></script>
     <!-- Bootstrap JS -->
     <script src="/recipesbook/bootstrap/js/bootstrap.min.js"></script>
     <!-- Custom JS -->
