--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
   <head>
 
 
@@ -17,7 +17,7 @@
       <!-- Include Modernizr in the head, before any other Javascript -->
       <script src="/recipesbook/includes/js/modernizr-2.6.2.min.js"></script>
 
-
+      <link href="/stylesheets/style.css" rel="stylesheet" >
       <link href="/stylesheets/styles_index.css" rel="stylesheet" >
 
 
@@ -34,7 +34,8 @@
 
       <!-- App -->
       <script src="/controllers/controller.js"></script>
-
+      <!-- jQuery -->
+      <script src="/recipesbook/includes/js/jquery-2.1.1.js"></script>
     </head>
     <body ng-app="recepiebook">
       {{{body}}}
