--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -51,7 +51,7 @@
 
       <div class="container productsContainer" ng-controller="Appctrl">
         <div id="products" class="row list-group">
-          <form action="/get_recipe" method="post">
+          <form action="/get_recipes" method="post">
 
             <div ng-repeat="category in categories">
               <div class="clearfix"></div>
