fix recipes problems

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -60,7 +60,7 @@
               <div class="item col-xs-6 col-sm-4 col-md-3 col-lg-2" ng-repeat="item in category.items | filter:searching">
                 <label class="btn">
                   <div class="thumbnail">
-                    <img class="group list-group-image img-thumbnail img-check" ng-click="selectIngredients(item,$event)" ng-class="{'check' : toggle}" ng-src="[[item.image]]" alt="User Pic" />
+                    <img class="group list-group-image img-thumbnail img-check" ng-click="selectIngredients(item,$event)" ng-class="{'check' : item.toggle}" ng-src="[[item.image]]" alt="User Pic" />
                     <input type="checkbox" ng-model="item.toggle" name="food" value="[[item.name]]" class="hidden" />
                     <div class="caption">
                       <h4 class="group inner list-group-item-heading">[[item.name]]</h4>
