--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -19,7 +19,7 @@
 
       <link href="/stylesheets/style.css" rel="stylesheet" >
       <link href="/stylesheets/styles_index.css" rel="stylesheet" >
-
+      <!-- add font -->
 
 
       <!-- AngularJs -->
