--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -1,13 +1,8 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 1.4rem;
+  background-color: #485274;
+  }
 }
-
-a {
-  color: #00B7FF;
-}
-
-
 /* --------------------------------
 
 Primary style
@@ -17,20 +12,37 @@ Primary style
   box-sizing: border-box;
 }
 
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.6rem;
-  font-family: "Open Sans", sans-serif;
-  background-color: #485274;
-}
 
 a {
   text-decoration: none;
+  color: #00B7FF;
 }
 
+/* --------------------------------
+
+Recipes
+
+-------------------------------- */
+.Ingredients{
+  color: #f00;
+}
+.description{
+  white-space: pre-line;
+}
+.recipeName{
+  color: #ffffff;
+  font-family: 'Merriweather', serif; font-size: 40px;
+  font-weight: 300;
+  line-height: 40px; margin: 0 30px 40px;
+  text-align: center;
+  text-shadow: #080808 -1px -1px;
+  background-color: #495682;
+  padding: 8px 20px;
+  border-radius: 5px;
+}
+.descriptionClass {
+  display: inline-block;
+}
 /* --------------------------------
 
 Main Components
@@ -66,25 +78,27 @@ Main Components
 }
 @media only screen and (min-width: 768px) {
   .cd-header.nav-is-visible {
-    -webkit-transform: translateY(170px);
-    -moz-transform: translateY(170px);
-    -ms-transform: translateY(170px);
-    -o-transform: translateY(170px);
-    transform: translateY(170px);
+    -webkit-transform: translateY(110px);
+    -moz-transform: translateY(110px);
+    -ms-transform: translateY(110px);
+    -o-transform: translateY(110px);
+    transform: translateY(110px);
   }
 }
 
 .cd-logo {
   float: left;
-  margin-top: 28px;
+  position: relative;
+  width: 100%;
+  margin: -6px auto;
 }
 
 .cd-3d-nav-trigger {
-  position: relative;
-  float: right;
+  position: absolute;
   height: 45px;
   width: 45px;
-  margin-top: 18px;
+  top: 20px;
+  right: 0px;
   /* replace text with background image */
   overflow: hidden;
   text-indent: 100%;
@@ -182,7 +196,7 @@ Main Components
 }
 @media only screen and (min-width: 768px) {
   .cd-3d-nav-container {
-    height: 170px;
+    height: 110px;
   }
 }
 
@@ -305,7 +319,7 @@ Main Components
 }
 @media only screen and (min-width: 768px) {
   .cd-3d-nav a {
-    padding: 7.6em 1em 0;
+    padding: 5.3em 1em 0;
     color: #ffffff;
     font-size: 1.3rem;
     font-weight: 600;
@@ -318,7 +332,7 @@ Main Components
     text-overflow: ellipsis;
   }
   .cd-3d-nav a::before {
-    top: 4.4em;
+    top: 2.2em;
     left: 50%;
     right: auto;
     -webkit-transform: translateX(-50%);
@@ -432,11 +446,11 @@ main.nav-is-visible {
 }
 @media only screen and (min-width: 768px) {
   main.nav-is-visible {
-    -webkit-transform: translateY(170px);
-    -moz-transform: translateY(170px);
-    -ms-transform: translateY(170px);
-    -o-transform: translateY(170px);
-    transform: translateY(170px);
+    -webkit-transform: translateY(110px);
+    -moz-transform: translateY(110px);
+    -ms-transform: translateY(110px);
+    -o-transform: translateY(110px);
+    transform: translateY(110px);
   }
   main h1 {
     font-size: 3.6rem;
