--- a/server/views/get_recipe.hbs
+++ b/server/views/get_recipe.hbs
@@ -40,15 +40,19 @@
 
 {{# each recipes }}
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-6">
-      <h1>Name of recipes : {{this.name}}</h1>
-      <h3>Ingredients :  {{this.ingredients}}</h3>
-      <h4>Description :  {{this.description}}</h4>
+  <div class="row descriptionClass">
+    <div class="col-sm-12">
+      <h1 id="recipeName" class="recipeName">{{this.name}}</h1>
+      <img  src="{{ this.image }}" alt="User Pic" width="100%" /> </br>
+      <br>
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-6">
-      <img  src="{{ this.image }}" alt="User Pic" /> </br>
+    <div class="col-sm-12 ">
+      <h3>Ingredients : <span class="Ingredients"><strong>{{this.ingredients}}</strong></span></h3>
+      <br>
+      <h3>Description : <br><br>
+				<span class="description"><strong> {{this.description}}</strong></span></h3>
     </div>
+
   </div>
 </div>
 </br></br></br>
