--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -52,7 +52,7 @@
       <div class="container productsContainer" ng-controller="Appctrl">
         <div id="products" class="row list-group">
           <form action="/get_recipe" method="post">
-
+						<div id="fixedRecipes"><div class="row"><div ng-repeat="recipe in totalRecepies" class="col-xs-12 col-sm-6 col-md-6 col-lg-3"><h5>[[recipe.name]]</h5><img height="100px" width="100px" ng-src="[[recipe.image]]" alt="User Pic" /></div></div></div>
             <div ng-repeat="category in categories">
               <div class="clearfix"></div>
               <h1>[[category.name]]</h1>
