--- a/server/views/layout_admin.hbs
+++ b/server/views/layout_admin.hbs
@@ -9,6 +9,7 @@
 
           <meta charset="utf-8" />
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
           <!-- Latest compiled and minified CSS -->
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -23,6 +24,8 @@
 
 
           <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
+
+
 
 
 
