--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,113 +1,110 @@
 <header class="cd-header">
-		<a href="#0" class="cd-logo"><img src="images/logo.png" width="" height="" alt="Logo"></a>
-		<a href="#0" class="cd-3d-nav-trigger">
+  <a href="#0" class="cd-logo">
+    <img src="images/logo.png" width="" height="" alt="Logo">
+    </a>
+    <a href="#0" class="cd-3d-nav-trigger">
 			Menu
-			<span></span>
-		</a>
-	</header> <!-- .cd-header -->
 
-	<main>
-
-		<!-- all your content here -->
-	</main>
-
-	<nav class="cd-3d-nav-container">
-		<ul class="cd-3d-nav">
-			<!-- <li class="cd-selected">
-				<a href="#0">Home</a>
-			</li> -->
-
-			<li>
-				<a href="/">Home</a>
-			</li>
-
-			<!-- <li>
-				<a href="#0">Images</a>
-			</li> -->
-
-			<!-- <li>
-				<a href="#0">A</a>
-			</li> -->
-
-			<li>
-				<a href="/">AboutUs</a>
-			</li>
-		</ul> <!-- .cd-3d-nav -->
-
-		<span class="cd-marker color-1"></span>
-	</nav> <!-- .cd-3d-nav-container -->
-
-
-        <div class="nav-wrapper container">
-          <form class="form-inline pull-right">
-            <div center class="input-field">
-              <input id="search" type="text" data-ng-model="searching.name" required placeholder="Search...">
-              <label for="search"></label>
-            </div>
-          </form>
+      <span></span>
+    </a>
+  </header>
+  <!-- .cd-header -->
+  <main>
+    <!-- all your content here -->
+  </main>
+  <nav class="cd-3d-nav-container">
+    <ul class="cd-3d-nav">
+      <!-- <li class="cd-selected"><a href="#0">Home</a></li> -->
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/">AboutUs</a>
+      </li>
+    </ul>
+    <!-- .cd-3d-nav -->
+    <span class="cd-marker color-1"></span>
+  </nav>
+  <!-- .cd-3d-nav-container -->
+  <div class="nav-wrapper container">
+    <form class="form-inline pull-right">
+      <div center class="input-field">
+        <input id="search" type="text" data-ng-model="searching.name" required placeholder="Search...">
+          <label for="search"></label>
         </div>
-
-
-
-      <div class="container productsContainer" ng-controller="Appctrl">
-        <div id="products" class="row list-group">
-          <form action="/get_recipe" method="post">
-						<div id="fixedRecipes"><div class="row"><div ng-repeat="recipe in totalRecepies" class="col-xs-12 col-sm-6 col-md-6 col-lg-3"><h5>[[recipe.name]]</h5><img height="100px" width="100px" ng-src="[[recipe.image]]" alt="User Pic" /></div></div></div>
-            <div ng-repeat="category in categories">
-              <div class="clearfix"></div>
-              <h1>[[category.name]]</h1>
-
-              <div class="item col-xs-6 col-sm-4 col-md-3 col-lg-2" ng-repeat="item in category.items | filter:searching">
-                <label class="btn">
-                  <div class="thumbnail">
-                    <img class="group list-group-image img-thumbnail img-check" ng-click="selectIngredients(item,$event)" ng-class="{'check' : item.toggle}" ng-src="[[item.image]]" alt="User Pic" />
-                    <input type="checkbox" ng-model="item.toggle" name="food" value="[[item.name]]" class="hidden" />
-                    <div class="caption">
-                      <h4 class="group inner list-group-item-heading">[[item.name]]</h4>
-                    </div>
-                 </div>
-                </label>
+      </form>
+    </div>
+    <div class="container productsContainer" ng-controller="Appctrl">
+      <div id="products" class="row list-group">
+        <form action="/get_recipe" method="post">
+          <div id="fixedRecipes">
+            <div class="row">
+              <div ng-repeat="recipe in totalRecepies" class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
+                <h5>[[recipe.name]]</h5>
+                <img height="100px" width="100px" ng-src="[[recipe.image]]" alt="User Pic" />
               </div>
             </div>
-            <button class="pull-left btn btn-primary" id="fixed-btn" type="submit">
-              Number of results:  <span class="badge">[[ totalRecepiesFound ]]</span>
-            </button>
-          </form>
-        </div>
+          </div>
+          <div ng-repeat="category in categories">
+            <div class="clearfix"></div>
+            <h1>[[category.name]]</h1>
+            <div class="item col-xs-6 col-sm-4 col-md-3 col-lg-2" ng-repeat="item in category.items | filter:searching">
+              <label class="btn">
+                <div class="thumbnail">
+                  <img class="group list-group-image img-thumbnail img-check" ng-click="selectIngredients(item,$event)" ng-class="{'check' : item.toggle}" ng-src="[[item.image]]" alt="User Pic" />
+                  <input type="checkbox" ng-model="item.toggle" name="food" value="[[item.name]]" class="hidden" />
+                  <div class="caption">
+                    <h4 class="group inner list-group-item-heading">[[item.name]]</h4>
+                  </div>
+                </div>
+              </label>
+            </div>
+          </div>
+          <button class="pull-left btn btn-primary" id="fixed-btn" type="submit">
+              Number of results:
+            <span class="badge">[[ totalRecepiesFound ]]</span>
+          </button>
+        </form>
       </div>
-
-
-
+    </div>
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-10 text-center">
-                    <br>
-                    <br>
-                    <h4>Copyright &copy; O.K Web Design 2016. All Rights Reserved</h4>
-                    <h4><a href="mailto:obadhh@gmail.com">Obadhh@gmail.com</a></h4>
-                </div><!-- end col-sm-10 -->
-
-
-
-                <div class="col-sm-2">
-                    <h5>Follow Us</h5>
-                    <ul class="unstyled">
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Google Plus</a></li>
-                    </ul>
-                </div><!-- end col-sm-2 -->
-
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </footer>
-</div> <!-- end container -->
-
-    <!-- All Javascript at the bottom of the page for faster page loading -->
-    <!-- First try for the online version of jQuery-->
-    <script src="javascripts/main.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="/recipesbook/bootstrap/js/bootstrap.min.js"></script>
-    <!-- Custom JS -->
-    <script src="javascripts/js-index.js"></script>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-10 text-center">
+            <br>
+              <br>
+                <h4>Copyright &copy; O.K Web Design 2016. All Rights Reserved</h4>
+                <h4>
+                  <a href="mailto:obadhh@gmail.com">Obadhh@gmail.com</a>
+                </h4>
+              </div>
+              <!-- end col-sm-10 -->
+              <div class="col-sm-2">
+                <h5>Follow Us</h5>
+                <ul class="unstyled">
+                  <li>
+                    <a href="#">Twitter</a>
+                  </li>
+                  <li>
+                    <a href="#">Facebook</a>
+                  </li>
+                  <li>
+                    <a href="#">Google Plus</a>
+                  </li>
+                </ul>
+              </div>
+              <!-- end col-sm-2 -->
+            </div>
+            <!-- end row -->
+          </div>
+          <!-- end container -->
+        </footer>
+      </div>
+      <!-- end container -->
+      <!-- All Javascript at the bottom of the page for faster page loading -->
+      <!-- First try for the online version of jQuery-->
+      <script src="javascripts/main.js"></script>
+      <!-- Bootstrap JS -->
+      <script src="/recipesbook/bootstrap/js/bootstrap.min.js"></script>
+      <!-- Custom JS -->
+      <script src="javascripts/js-index.js"></script>
